# AoCS

./: CMakeLists.txt  README.md  bus.cpp  bus.h  car.cpp  car.h  container.h  main.cpp  random.h  truck.cpp  variant.txt  vehicle.cpp  vehicle.h
Additional_functions/: random.cpp  random.h
Data_structures/: container.cpp  container.h
Structures/: bus.cpp  bus.h  car.cpp  car.h  truck.cpp  truck.h  vehicle.cpp  vehicle.h
Task1/: CMakeLists.txt  in_example.txt  main.cpp
Task1/Data_structures/: container.cpp
Task1/Structures/: bus.cpp  bus.h  car.h  vehicle.cpp
Task1/test_results/: out2500n.txt  out50n.txt
Task2/: CMakeLists.txt  main.cpp
Task2/Additional_functions/: random.cpp  random.h
Task2/Data_structures/: container.cpp  container.h
Task2/Structures/: bus.cpp  bus.h  car.cpp  car.h  truck.cpp  truck.h  vehicle.cpp  vehicle.h
Task2/test_results/: out10000n.txt  out1f.txt  out1n.txt  out20000f.txt  out2500f.txt  out2500n.txt  out500n.txt  out50n.txt  out6000n.txt  sorted_out0f.txt  sorted_out10000n-0.227567.txt  sorted_out1f-0.000462.txt  sorted_out1n-0.000487.txt  sorted_out20000f-0.237068.txt  sorted_out2500n-0.018616.txt  sorted_out500n-0.002449.txt  sorted_out50n-0.000893.txt  sorted_out6000n-0.080179.txt
Task2/tests/: testf1.txt  testf10001.txt  testf20000.txt
docs/: doc.fdb_latexmk  doc.fls  doc.tex
test_results/: out10000n.txt  out500f.txt  out500n.txt  out50f.txt  out6000f.txt  out6000n.txt  sorted_out10000f:0.662193s.txt  sorted_out10000n-0.649833s.txt  sorted_out2500f-0.048916s.txt  sorted_out2500n-0.049225s.txt  sorted_out500f-0.004507s..txt  sorted_out500n-0.004260s.txt  sorted_out50n-0.000540s.txt  sorted_out6000f:0.226239s.txt  sorted_out6000n-0.318252s.txt
tests/: testf500.txt
